--- a/app/src/main/res/layout/fragment_insert_student.xml
+++ b/app/src/main/res/layout/fragment_insert_student.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cases.insert.InsertStudentFragment">
+    tools:context=".view.cases.insert.InsertStudentFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
